--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8"/>
     <title>Bronto</title>
     <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.png">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-<h2>Bronto</h2>
-<h3>A dinosaur runner rpg</h3>
+	<div style="width: 400px; margin: 10% auto; text-align: center;">
+        <img src="assets/egg.png" alt="Pixel Egg" />
+	    <h2>Bronto</h2>
+	    <h3>A dinosaur runner rpg</h3>
+	</div>
+
+
+
 </body>
+
 </html>
