--- a/index.html
+++ b/index.html
@@ -11,6 +11,23 @@
         <img src="assets/egg.png" alt="Pixel Egg" />
 	    <h2>Bronto</h2>
 	    <h3>A dinosaur runner rpg</h3>
+        <div class="textbox">
+            <img class="avatar" src="assets/amber.png" width="64" />
+            <table>
+                <tr>
+                    <td>HEALTH</td><td><div class="bar health" style="width: 56px;"></div></td>
+                </tr>
+                <tr>
+                    <td>ATTACK</td><td><div class="bar attack" style="width: 8px;"></div></td>
+                </tr>
+                <tr>
+                    <td>SPEED</td><td><div class="bar speed" style="width: 16px;"></div></td>
+                </tr>
+                <tr>
+                    <td>JUMP</td><td><div class="bar jump" style="width: 22px;"></div></td>
+                </tr>
+            </table>
+        </div>
 	</div>
 
 
