crisp edges, add to homescree

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/handlebars/handlebars.js"></script>
+
+    <meta name="apple-mobile-web-app-title" content="Bronto" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="apple-mobile-web-app-capable" content="no" />
+    <link href="assets/favicon.png" sizes="16x16" rel="apple-touch-icon" />
+
+
+
     <script id="character-template" type="text/x-handlebars-template">
         <div class="character">
             <h4>{{name}} (level {{level}}  xp {{xp}})</h4>
