--- a/tpl/emptySlot.html
+++ b/tpl/emptySlot.html
@@ -1,3 +1,3 @@
-<div class="character">
-    <div class="button" data-slot="{{slot}}"><img src="assets/egg.png" alt="Pixel Egg"/>Generate Character</div>
+<div class="character empty">
+    <div class="button" data-slot="{{slot}}"><div class="icon egg{{slot}}"/>Generate Character</div>
 </div>
