--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 
 </head>
 <body>
-<div style="width: 960px; margin: 20px auto; text-align: center;">
+<div id="container">
 
-
+<div id="window">
     <div id="wrapper">
 
         <div id="background2" class="screen">
@@ -56,9 +56,9 @@
         </div>
 
 
-        <!--<div id="background" class="screen">
-            <img src="assets/out.gif" class="stretch" alt="" />
-        </div>-->
+        <div id="background" class="screen">
+            <img src="assets/chuck.png" class="stretch" alt="" />
+        </div>
 
 
         <div id="game" class="screen base_screen">
@@ -82,6 +82,7 @@
 
     </div>
 
+</div>
 </div>
 </body>
 
