--- a/index.html
+++ b/index.html
@@ -51,9 +51,7 @@
 
         </div>
 
-        <div id="loading">
 
-        </div>
 
 
         <div id="background" class="screen">
@@ -78,6 +76,9 @@
             </div>
         </div>
 
+        <div id="loading" class="screen">
+
+        </div>
 
 
     </div>
