--- a/tpl/credits.html
+++ b/tpl/credits.html
@@ -1,7 +1,7 @@
 <div class="credits">
 
 
-    <p>Create by me @ztiromoritz for MiniLD63 in XX discontinuous hours.</p>
+    <p>Create by me <a href="https://twitter.com/ztiromoritz">@ztiromoritz</a> for MiniLD63 in 36 discontinuous hours.</p>
 
     <p>My 4 year old son. "Dad, let's paint another dinosaur!"</p>
 
