--- a/index.html
+++ b/index.html
@@ -47,39 +47,28 @@
 <div id="window">
     <div id="wrapper">
 
-        <div id="background2" class="screen">
-
-        </div>
-
-
-
+        <div id="background2" class="screen"></div>
 
         <div id="background" class="screen">
             <img src="assets/chuck.png" class="stretch" alt="" />
         </div>
 
 
-        <div id="game" class="screen base_screen">
+        <div id="game" class="screen base_screen"></div>
 
-        </div>
+        <div id="hud" class="hud"></div>
 
-        <div id="fight_screen" class="screen base_screen" >
+        <div id="fight_screen" class="screen base_screen" ></div>
 
-        </div>
-
-        <div id="ui" class="screen base_screen">
-
-        </div>
+        <div id="ui" class="screen base_screen"></div>
 
         <div id="dialog" class="screen dialog" style="display:none;">
-            <div class="message">
-            </div>
+            <div class="message"></div>
         </div>
 
-        <div id="loading" class="screen">
 
-        </div>
 
+        <div id="loading" class="screen"></div>
 
     </div>
 
