new stuff not tested

--- a/tpl/characterOverview.html
+++ b/tpl/characterOverview.html
@@ -3,6 +3,7 @@
         <div class="button button_small settings" id="button_title_back">
             <div class="icon back"/>
         </div>
+        <h3>Select Character</h3>
         <div id="slot1"></div>
         <div id="slot2"></div>
         <div id="slot3"></div>
