--- a/tpl/title.html
+++ b/tpl/title.html
@@ -7,7 +7,7 @@
 
         <div class="button" id="button_select">
             <div class="icon egg1"/>
-            Select Character
+            Start
         </div>
 
         <div class="button" id="button_credits">
