--- a/index.html
+++ b/index.html
@@ -35,44 +35,36 @@
     <script src="js/bronto.ui.js"></script>
     <script src="js/bronto.fight.js"></script>
 
+    <script src="js/bronto.level.js"></script>
     <script src="js/bronto.game.js"></script>
 
-    <script>$$(function(){ui.showTitle();});</script>
+    <script>$$(function () {
+        ui.showTitle();
+    });</script>
 
 
 </head>
 <body>
-<div id="container">
+<div id="wrapper">
+    <div id="background2" class="screen"></div>
 
-<div id="window">
-    <div id="wrapper">
-
-        <div id="background2" class="screen"></div>
-
-        <div id="background" class="screen">
-            <img src="assets/chuck.png" class="stretch" alt="" />
-        </div>
-
-
-        <div id="game" class="screen base_screen"></div>
-
-        <div id="hud" class="hud"></div>
-
-        <div id="fight_screen" class="screen base_screen" ></div>
-
-        <div id="ui" class="screen base_screen"></div>
-
-        <div id="dialog" class="screen dialog" style="display:none;">
-            <div class="message"></div>
-        </div>
-
-
-
-        <div id="loading" class="screen"></div>
-
+    <div id="background" class="screen">
+        <img src="assets/chuck.png" class="stretch" alt=""/>
     </div>
 
-</div>
+    <div id="game" class="screen base_screen"></div>
+
+    <div id="hud" class="hud"></div>
+
+    <div id="fight_screen" class="screen base_screen"></div>
+
+    <div id="ui" class="screen base_screen"></div>
+
+    <div id="dialog" class="screen dialog" style="display:none;">
+        <div class="message"></div>
+    </div>
+
+    <div id="loading" class="screen"></div>
 </div>
 </body>
 
